Fix GJF (and detekt) on Java 16+