@@ -41,6 +41,7 @@ import com.github.mustachejava.MustacheFactory;
 
 import com.diffplug.common.base.Unhandled;
 import com.diffplug.common.io.Resources;
+import com.diffplug.spotless.Jvm;
 import com.diffplug.spotless.ResourceHarness;
 
 public class MavenIntegrationHarness extends ResourceHarness {
@@ -81,6 +82,17 @@ public class MavenIntegrationHarness extends ResourceHarness {
 	@BeforeEach
 	void gitAttributes() throws IOException {
 		setFile(".gitattributes").toContent("* text eol=lf");
+		if (Jvm.version() >= 16) {
+			// for GJF https://github.com/diffplug/spotless/issues/834
+			setFile(".mvn/jvm.config").toContent(
+					"--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED" +
+							" --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED" +
+							" --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED" +
+							" --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED" +
+							" --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED" +
+							// this last line is for Detekt
+							" --add-opens java.base/java.lang=ALL-UNNAMED");
+		}
 		// copy the mvnw resources
 		copy("mvnw").setExecutable(true);
 		copy("mvnw.cmd");
